# FD-FOND-laostar-dominik

./: README.md
benchmarks/blocksworld/: p11.pddl
benchmarks/chain-of-rooms-fixed/: domain.pddl  p10.pddl  p100.pddl  p20.pddl  p30.pddl  p40.pddl  p50.pddl  p60.pddl  p70.pddl  p80.pddl  p90.pddl
benchmarks/generators/: ProblemGeneratorChainOfRoomsFixed.java
benchmarks/generators/faults/: p_100_120.pddl
benchmarks/generators/first-responders/: createSas.py  genFR
benchmarks/scaled-faults/: d_100_120.pddl
benchmarks/tireworld/: p01.pddl
src/: build_all
src/VAL/: lex.yy.cc  validate
src/driver/: aliases.py  arguments.py  run_components.py
src/preprocess/: Makefile.temp0-e
src/search/: CMakeLists.txt  abstract_task.h  additive_heuristic.cc  additive_heuristic.h  causal_graph.cc  delegating_task.cc  delegating_task.h  ff_heuristic.cc  global_operator.cc  global_operator.h  global_state.cc  global_state.h  globals.cc  globals.h  lazy_search.cc  lm_cut_heuristic.cc  option_parser.cc  option_parser.h  option_parser_util.h  planner.cc  relaxation_heuristic.cc  relaxation_heuristic.h  root_task.cc  root_task.h  search_engine.cc  search_engine.h  search_node_info.h  search_progress.cc  search_space.cc  search_space.h  search_statistics.cc  state_id.h  state_registry.cc  state_registry.h  successor_generator.cc  task_proxy.h  task_tools.cc  timer.h  utilities.cc  utilities.h  (+2 more)
src/search/bliss-0.72/: Makefile  bliss  bliss.cc  graph.cc  graph.hh
src/search/graph_algorithms/: topological_sort.cc  transitive_closure.cc
src/search/laostar/: connector.cc  connector.h  graphviz_writer.cc  graphviz_writer.h  laostar.cc  laostar.h  laostar_utils.cc  laostar_utils.h  preferenceRule.h  util.cc  util.h
src/search/symmetries/: graph_creator.cc  graph_creator.h  group.cc  group.h  permutation.cc  permutation.h
